--- a/index.html
+++ b/index.html
@@ -22,45 +22,35 @@
     <main>
         <div class="head">
             <h1><u>Presidential Election Day in the United States</u></h1>
-            <h2>Understanding the Importance of Voting</h2>
+            <h2><i>Understanding the Importance of Voting</i></h2>
         </div>
         <!-- Home -->
         <section id="home">
             <div class="home">
-                <div class="home-top">
-                    <h2><u>Introduction</u></h2>
-                    <img src="images/americanFlag.webp" width="200" alt="American Flag">
-                </div>
-                <p>Presidential Election Day in the United States is a major civic event held every four years. It marks a time when Americans exercise their democratic right to vote for the President, reflecting the principles of democracy.</p>
+                <h2><u><i>Introduction</i></u></h2>
+                <!-- <img src="images/americanFlag.webp" width="200" alt="American Flag"> -->
+                <p><img src="images/americanFlag.webp" width="200" alt="American Flag"> Presidential Election Day in the United States is a major civic event held every four years. It marks a time when Americans exercise their democratic right to vote for the President, reflecting the principles of democracy.</p>
             </div>
         </section>
         <!-- History -->
         <section id="history">
             <div class="history" id="history">
-                <div class="history-top">
-                    <h2><u>History of Election Day</u></h2>
-                    <img src="images/oldVote.avif" width="200" alt="Old historical voting building">
-                </div>
-                <p>The tradition of holding elections on the first Tuesday after the first Monday in November was established in 1845. This date was chosen to accommodate rural farmers who needed to travel to polling stations after the harvest.</p>
+                <h2><u><i>History of Election Day</i></u></h2>
+                <p><img src="images/oldVote.avif" width="200" alt="Old historical voting building"> The tradition of holding elections on the first Tuesday after the first Monday in November was established in 1845. <br> This date was chosen to accommodate rural farmers who needed to travel to polling stations after the harvest.</p>
             </div>
         </section>
         <!-- Voting -->
         <section id="voting">
             <div class="voting" id="voting">
-                <div class="voting-top">
-                    <h2><u>How Voting Works</u></h2>
-                    <img src="images/vote.webp" width="200" alt="Voting box">
-                </div>
-                <p>Americans can vote in person at polling stations or by mail. Each state’s votes contribute to the Electoral College, a system that ultimately determines the winner.</p>
+                <h2><u><i>How Voting Works</i></u></h2>
+                <p><img src="images/vote.webp" width="200" alt="Voting box">Americans can vote in person at polling stations or by mail. Each state’s votes contribute to the Electoral College, a system that ultimately determines the winner.</p>
             </div>
         </section>
         <!-- Facts -->
         <section id="facts">
             <div class="facts" id="facts">
-                <div class="facts-top">
-                    <h2><u>Key Facts About Voting</u></h2>
-                    <img src="images/votingLine.jpg" width="200" alt="Line at a Voting Booth">
-                </div>
+                <h2><u><i>Key Facts About Voting</i></u></h2>
+                <img src="images/votingLine.jpg" width="200" alt="Line at a Voting Booth">
                 <ul>
                     <li>Voting age in the U.S. is 18 and above.</li>
                     <li>Each state has different methods and requirements for registration and voting.</li>
@@ -71,11 +61,8 @@
         <!-- Matters -->
         <section id="matters">
             <div class="matters" id="matters">
-                <div class="matters-top">
-                    <h2><u>Why Your Vote Matters</u></h2>
-                    <img src="images/multiVote.avif" width="200" alt="People of all diffrent backgrounds getting ready to vote">
-                </div>
-                <p>Voting is a way for citizens to have a say in their government. Each vote counts, and it’s through this collective decision-making that leaders are chosen to represent the public's values and interests.</p>
+                <h2><u><i>Why Your Vote Matters</i></u></h2>
+                <p><img src="images/multiVote.avif" width="200" alt="People of all diffrent backgrounds getting ready to vote"> Voting is a way for citizens to have a say in their government. Each vote counts, and it’s through this collective decision-making that leaders are chosen to represent the public's values and interests.</p>
             </div>
         </section>
     </main>
